--- a/reservasi.html
+++ b/reservasi.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="Welcome to Coffee Shop, your go-to place for the best coffee in town. Explore our wide range of coffee blends and enjoy a unique coffee experience." />
+        content="Welcome to Coffee Shop, tempat yang tepat untuk menikmati kopi terbaik di kota. Jelajahi berbagai macam campuran kopi kami dan nikmati pengalaman minum kopi yang unik." />
     <meta name="keywords"
         content="coffee, coffee shop, latte, butterscotch, taro latte, pandan coffee, mango yakult, nuttela blend" />
+    <meta property="og:image" content="img/logo.png" />
     <meta name="author" content="BimaTech" />
     <title>Coffee Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -647,10 +648,12 @@
     <form class="reservasi" id="reservasiForm">
         <h1>FORM RESERVASI</h1>
         <p style="color: white;">Nama Pemesan</p><input type="text" id="nama" placeholder="" required />
-        <p style="color: white;">Jumlah Pengunjung</p><input type="number" id="jumlah" value="0" placeholder="Jumlah" required />
+        <p style="color: white;">Jumlah Pengunjung</p><input type="number" id="jumlah" value="0" placeholder="Jumlah"
+            required />
         <p style="color: white;">Tanggal</p><input type="date" id="tanggal" placeholder="Tanggal/Hari" required />
         <p style="color: white;">Jam</p><input type="time" id="jam" placeholder="Jam" required />
-        <p style="color: white;">List Pesanan</p><input type="text" id="menu" placeholder="silahkan centang pesanan anda" required />
+        <p style="color: white;">List Pesanan</p><input type="text" id="menu"
+            placeholder="silahkan centang pesanan anda" required />
         <p style="color: white;">Note</p><input type="text" id="note" placeholder="" style="min-height: 10vh;" />
         <button type="submit">Reservasi</button>
     </form>
@@ -1414,70 +1417,70 @@
     <!--script checkbox-->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-    // Mendapatkan semua checkbox, input jumlah, dan tombol plus/minus
-    const checkboxes = document.querySelectorAll('input[type="checkbox"]');
-    const quantityInputs = document.querySelectorAll('.quantity');
-    const plusButtons = document.querySelectorAll('.plus');
-    const minusButtons = document.querySelectorAll('.minus');
-    const menuInput = document.getElementById('menu');
+            // Mendapatkan semua checkbox, input jumlah, dan tombol plus/minus
+            const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+            const quantityInputs = document.querySelectorAll('.quantity');
+            const plusButtons = document.querySelectorAll('.plus');
+            const minusButtons = document.querySelectorAll('.minus');
+            const menuInput = document.getElementById('menu');
 
-    // Fungsi untuk memperbarui daftar menu di form
-    function updateMenuList() {
-        let menuList = [];
-        checkboxes.forEach((checkbox, index) => {
-            if (checkbox.checked) {
-                const productName = checkbox.parentElement.querySelector('h3').textContent;
-                const quantity = quantityInputs[index].value;
-                menuList.push(`${productName} (${quantity})`);
+            // Fungsi untuk memperbarui daftar menu di form
+            function updateMenuList() {
+                let menuList = [];
+                checkboxes.forEach((checkbox, index) => {
+                    if (checkbox.checked) {
+                        const productName = checkbox.parentElement.querySelector('h3').textContent;
+                        const quantity = quantityInputs[index].value;
+                        menuList.push(`${productName} (${quantity})`);
+                    }
+                });
+                menuInput.value = menuList.join(', ');
             }
-        });
-        menuInput.value = menuList.join(', ');
-    }
 
-    // Menambahkan event listener untuk tombol plus
-    plusButtons.forEach((button, index) => {
-        button.addEventListener("click", (event) => {
-            event.preventDefault();
-            let quantity = parseInt(quantityInputs[index].value) || 0;
-            quantity += 1;
-            quantityInputs[index].value = quantity;
-            checkboxes[index].disabled = quantity === 0; // Nonaktifkan checkbox jika jumlah 0
-            updateMenuList();
-        });
-    });
+            // Menambahkan event listener untuk tombol plus
+            plusButtons.forEach((button, index) => {
+                button.addEventListener("click", (event) => {
+                    event.preventDefault();
+                    let quantity = parseInt(quantityInputs[index].value) || 0;
+                    quantity += 1;
+                    quantityInputs[index].value = quantity;
+                    checkboxes[index].disabled = quantity === 0; // Nonaktifkan checkbox jika jumlah 0
+                    updateMenuList();
+                });
+            });
 
-    // Menambahkan event listener untuk tombol minus
-    minusButtons.forEach((button, index) => {
-        button.addEventListener("click", (event) => {
-            event.preventDefault();
-            let quantity = parseInt(quantityInputs[index].value) || 0;
-            if (quantity > 0) {
-                quantity -= 1;
-                quantityInputs[index].value = quantity;
-                checkboxes[index].disabled = quantity === 0; // Nonaktifkan checkbox jika jumlah 0
-                if (quantity === 0) {
-                    checkboxes[index].checked = false; // Uncheck checkbox jika jumlah 0
-                }
-                updateMenuList();
-            }
-        });
-    });
+            // Menambahkan event listener untuk tombol minus
+            minusButtons.forEach((button, index) => {
+                button.addEventListener("click", (event) => {
+                    event.preventDefault();
+                    let quantity = parseInt(quantityInputs[index].value) || 0;
+                    if (quantity > 0) {
+                        quantity -= 1;
+                        quantityInputs[index].value = quantity;
+                        checkboxes[index].disabled = quantity === 0; // Nonaktifkan checkbox jika jumlah 0
+                        if (quantity === 0) {
+                            checkboxes[index].checked = false; // Uncheck checkbox jika jumlah 0
+                        }
+                        updateMenuList();
+                    }
+                });
+            });
 
-    // Menambahkan event listener untuk checkbox
-    checkboxes.forEach((checkbox, index) => {
-        checkbox.addEventListener("change", () => {
-            if (checkbox.checked && parseInt(quantityInputs[index].value) === 0) {
-                checkbox.checked = false; // Uncheck jika jumlah 0
-            }
-            updateMenuList();
-        });
-    });
+            // Menambahkan event listener untuk checkbox
+            checkboxes.forEach((checkbox, index) => {
+                checkbox.addEventListener("change", () => {
+                    if (checkbox.checked && parseInt(quantityInputs[index].value) === 0) {
+                        checkbox.checked = false; // Uncheck jika jumlah 0
+                    }
+                    updateMenuList();
+                });
+            });
 
-    // Inisialisasi: Nonaktifkan checkbox jika jumlah 0
-    checkboxes.forEach((checkbox, index) => {
-        checkbox.disabled = parseInt(quantityInputs[index].value) === 0;
-    });
-});
+            // Inisialisasi: Nonaktifkan checkbox jika jumlah 0
+            checkboxes.forEach((checkbox, index) => {
+                checkbox.disabled = parseInt(quantityInputs[index].value) === 0;
+            });
+        });
     </script>
 
     <script>
