--- a/food.html
+++ b/food.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="Welcome to Coffee Shop, tempat yang tepat untuk menikmati kopi terbaik di kota. Jelajahi berbagai macam campuran kopi kami dan nikmati pengalaman minum kopi yang unik." />
+        content="Welcome to Coffee Shop, your go-to place for the best coffee in town. Explore our wide range of coffee blends and enjoy a unique coffee experience." />
     <meta name="keywords"
         content="coffee, coffee shop, latte, butterscotch, taro latte, pandan coffee, mango yakult, nuttela blend" />
-    <meta property="og:image" content="img/logo.png" />
     <meta name="author" content="BimaTech" />
     <title>Coffee Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -90,8 +89,7 @@
     </section>
 
     <div class="halaman">
-        <h1>anda berada di halaman <h1
-                style="font-family: Fredericka the Great, serif; font-style: italic; font-weight: 400;">MAKANAN</h1>
+        <h1>anda berada di halaman <h1 style="font-family: Fredericka the Great, serif; font-style: italic; font-weight: 400;">MAKANAN</h1>
         </h1>
         <p>pilih menu yang anda inginkan</p>
     </div>
@@ -319,7 +317,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#">Tentang Kami</a></li>
+                    <li><a href="about.html">Tentang Kami</a></li>
                     <li><a href="#">Kopi Biji</a></li>
                     <li><a href="#">Pembayaran</a></li>
                     <li><a href="#">Pengiriman</a></li>
