--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="Welcome to Coffee Shop, tempat yang tepat untuk menikmati kopi terbaik di kota. Jelajahi berbagai macam campuran kopi kami dan nikmati pengalaman minum kopi yang unik." />
+        content="Welcome to Coffee Shop, your go-to place for the best coffee in town. Explore our wide range of coffee blends and enjoy a unique coffee experience." />
     <meta name="keywords"
         content="coffee, coffee shop, latte, butterscotch, taro latte, pandan coffee, mango yakult, nuttela blend" />
-    <meta property="og:image" content="img/logo.png" />
     <meta name="author" content="BimaTech" />
     <title>Coffee Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -625,7 +624,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#">Tentang Kami</a></li>
+                    <li><a href="about.html">Tentang Kami</a></li>
                     <li><a href="#">Kopi Biji</a></li>
                     <li><a href="#">Pengiriman</a></li>
                 </ul>
