--- a/about.html
+++ b/about.html
@@ -90,6 +90,7 @@
         padding: 20px;
         background-color: black;
         color: white;
+        margin-bottom: 1rem;
     }
 
     brest img {
@@ -189,6 +190,7 @@
         background-color: black;
         color: white;
         padding: 2rem 0;
+        margin-top: 1rem;
     }
 
     .footer .container {
@@ -237,12 +239,12 @@
     /* Media Queries for Tablet */
     @media (max-width: 768px) {
         .container {
-            flex-direction: column;
+            flex-direction: row;
             align-items: flex-start;
         }
 
         .nav {
-            flex-direction: column;
+            flex-direction: row;
             gap: 1rem;
         }
 
@@ -255,12 +257,18 @@
         }
 
         .map {
+            flex-direction: column;
             padding: 10px;
+            margin: 10%;
+        }
+
+        .kontak {
+            height: auto;
         }
 
         .map iframe {
             width: 100%;
-            height: 300px;
+            height: 50vh;
         }
 
         form input,
@@ -288,6 +296,10 @@
             gap: 0.5rem;
         }
 
+        .navi {
+            width: auto;
+        }
+
         .navi h1 {
             font-size: 1.5rem;
         }
@@ -296,9 +308,18 @@
             font-size: 0.875rem;
         }
 
+        brest img {
+            border-radius: 0px 30px 0px 30px;
+            filter: drop-shadow(15px 7px 5px rgba(255, 255, 255, 0.8));
+        }
+
+        .kontak {
+            height: auto;
+        }
+
         .map iframe {
-            width: 200px;
-            height: 50vh;
+            width: 100%;
+            height: 30vh;
         }
 
         form input,
@@ -346,7 +367,7 @@
         </div>
 
     </brest>
-    <section>
+    <section class="kontak">
         <div class="map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.013292292073!2d-118.3089726847827!3d34.06164508060769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c7b3f0e1d1c1%3A0x1f1f1f1f1f1f1f1f!2sSanta%20Monica%20Pier!5e0!3m2!1sen!2sus!4v1626823660003!5m2!1sen!2sus"
