--- a/reservasi.html
+++ b/reservasi.html
@@ -230,6 +230,19 @@
         font-size: 14px;
     }
 
+    /*style menu reservasi*/
+    #menu {
+        width: 100%;
+        min-height: 40px;
+        resize: none;
+        line-height: 1.5;
+        padding: 10px;
+        border: 1px black solid;
+        border-radius: 5px;
+    }
+
+    /* akhir kode menu reservasi */
+
     .reservasi button {
         width: 100%;
         padding: 10px;
@@ -544,12 +557,12 @@
 
     @media (max-width: 767px) {
         .container {
-            flex-direction: column;
+            flex-direction: row;
             align-items: flex-start;
         }
 
         .nav {
-            flex-direction: column;
+            flex-direction: row;
             gap: 1rem;
         }
 
@@ -579,6 +592,10 @@
             /* Lebar input */
         }
 
+        .footer-logo img {
+            align-self: center;
+            margin: 0 auto;
+        }
 
         .footer .container {
             flex-direction: column;
@@ -628,8 +645,8 @@
             required />
         <p style="color: white;">Tanggal</p><input type="date" id="tanggal" placeholder="Tanggal/Hari" required />
         <p style="color: white;">Jam</p><input type="time" id="jam" placeholder="Jam" required />
-        <p style="color: white;">List Pesanan</p><input type="text" id="menu"
-            placeholder="silahkan centang pesanan anda" required />
+        <p style="color: white;">List Pesanan</p>
+        <textarea id="menu" placeholder="Silahkan input jumblah menu lalu centang pesanan anda" required></textarea>
         <p style="color: white;">Note</p><input type="text" id="note" placeholder="" style="min-height: 10vh;" />
         <button type="submit">Reservasi</button>
     </form>
@@ -1544,6 +1561,17 @@
                     img.remove();
                 }, 1010);
             }
+        });
+    </script>
+
+    <!--scrip daftar pesanan fungsi scroll-->
+    <script>
+        // Fungsi untuk memperbarui tinggi input menu
+        const textarea = document.getElementById('menu');
+
+        textarea.addEventListener('input', function () {
+            this.style.height = 'auto'; // Reset height to auto to recalculate
+            this.style.height = (this.scrollHeight) + 'px'; // Set height to scrollHeight
         });
     </script>
 
