--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <a href="reservasi.html" title="Home" id="reservasi">
                     RESERVASI
                 </a>
+<a href="admin.html" title="Admin">
+    Admin
+</a>
                 <a href="keranjang.html" title="Shopping Cart">
                     <i class="fas fa-shopping-cart"></i>
                     <span id="cart-badge" class="cart-badge">0</span> <!-- Badge untuk jumlah item -->
