--- a/admin.html
+++ b/admin.html
@@ -1,74 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Admin Page for Coffee Shop" />
     <title>Admin - Coffee Shop</title>
-    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
+    <link href="https://cdn.tailwindcss.com" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
+
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
-        <h1 class="text-2xl font-bold mb-4">Add New Product</h1>
-        <form id="productForm" class="bg-white p-4 rounded shadow">
-            <div class="mb-4">
-                <label for="id" class="block text-gray-700">ID</label>
-                <input type="text" id="id" class="border rounded w-full p-2" required>
-            </div>
-            <div class="mb-4">
-                <label for="name" class="block text-gray-700">Name</label>
-                <input type="text" id="name" class="border rounded w-full p-2" required>
-            </div>
-            <div class="mb-4">
-                <label for="price" class="block text-gray-700">Price</label>
-                <input type="number" id="price" class="border rounded w-full p-2" required>
-            </div>
-            <div class="mb-4">
-                <label for="stock" class="block text-gray-700">Stock</label>
-                <input type="number" id="stock" class="border rounded w-full p-2" required>
-            </div>
-            <div class="mb-4">
-                <label for="image" class="block text-gray-700">Image URL</label>
-                <input type="text" id="image" class="border rounded w-full p-2" required>
-            </div>
-            <button type="submit" class="bg-blue-500 text-white p-2 rounded">Add Product</button>
+        <h1 class="text-2xl font-bold mb-4">Admin Panel</h1>
+
+        <form id="addProductForm" class="mb-4">
+            <h2 class="text-xl font-semibold">Add New Product</h2>
+            <input type="text" id="productName" placeholder="Product Name" required class="border p-2 mr-2" />
+            <input type="text" id="productPrice" placeholder="Product Price" required class="border p-2 mr-2" />
+            <input type="text" id="productImage" placeholder="Image URL" required class="border p-2 mr-2" />
+            <button type="submit" class="bg-blue-500 text-white p-2">Add Product</button>
         </form>
+
+        <h2 class="text-xl font-semibold">Existing Products</h2>
+        <div id="productList" class="mt-4"></div>
     </div>
 
     <script>
-        document.getElementById('productForm').addEventListener('submit', function(event) {
-            event.preventDefault();
+        // Function to display products
+        function displayProducts() {
+            const productList = document.getElementById('productList');
+            productList.innerHTML = '';
 
-            const id = document.getElementById('id').value;
-            const name = document.getElementById('name').value;
-            const price = document.getElementById('price').value;
-            const stock = document.getElementById('stock').value;
-            const image = document.getElementById('image').value;
-
-            const productData = {
-                id: id,
-                name: name,
-                price: price,
-                stock: stock,
-                image: image
-            };
-
-            // Send data to Google Sheets
-            fetch('https://script.google.com/macros/s/AKfycbxhmu5kfpZEioa8BTjPv3LfCLGS4e-XcIOy7BlXyaCr0MWeuYdo_1ABWhFSroJeB6YzZQ/exec', {
-                method: 'POST',
-                body: JSON.stringify(productData),
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert('Product added successfully!');
-                document.getElementById('productForm').reset();
-            })
-            .catch(error => {
-                console.error('Error:', error);
+            const products = JSON.parse(localStorage.getItem('menuItems')) || [];
+            products.forEach((product, index) => {
+                const productDiv = document.createElement('div');
+                productDiv.className = 'flex justify-between items-center border p-2 mb-2';
+                productDiv.innerHTML = `
+                    <div>
+                        <h3 class="font-semibold">${product.name}</h3>
+                        <p>Price: Rp${product.price}</p>
+                        <img src="${product.image}" alt="${product.name}" class="w-16 h-16 object-cover" />
+                    </div>
+                    <button class="bg-red-500 text-white p-1" onclick="deleteProduct(${index})">Delete</button>
+                `;
+                productList.appendChild(productDiv);
             });
+        }
+
+        // Function to add a new product
+        document.getElementById('addProductForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const name = document.getElementById('productName').value;
+            const price = document.getElementById('productPrice').value;
+            const image = document.getElementById('productImage').value;
+
+            const products = JSON.parse(localStorage.getItem('menuItems')) || [];
+            products.push({ name, price, image });
+            localStorage.setItem('menuItems', JSON.stringify(products));
+
+            // Clear the form
+            this.reset();
+            displayProducts();
         });
+
+        // Function to delete a product
+        function deleteProduct(index) {
+            const products = JSON.parse(localStorage.getItem('menuItems')) || [];
+            products.splice(index, 1);
+            localStorage.setItem('menuItems', JSON.stringify(products));
+            displayProducts();
+        }
+
+        // Display products on page load
+        displayProducts();
     </script>
 </body>
+
 </html>
