--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     left: 208px;
     width: 60px;
     height: 60px;
-    background-image: url('kopi.jpg');
+    background-image: url('img/kopi.jpg');
     background-size: cover;
     border-radius: 50%;
     border: 6px solid #f5f0e6;
