--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     height: 70px;
     background-color: transparent;
     border-radius: 10px;
+    margin-top: 100px;
   }
   
   .navigation ul {
