--- a/food.html
+++ b/food.html
@@ -29,7 +29,7 @@
         height: 70px;
         background-color: transparent;
         border-radius: 10px;
-        margin-top: 1rem;
+        margin-top: 100px;
     }
 
     .navigation ul {
