--- a/index.html
+++ b/index.html
@@ -779,6 +779,8 @@
     }
     list.forEach((item) => item.addEventListener('click', active));
   </script>
+    
+    <script>
         document.addEventListener("DOMContentLoaded", () => {
             const addToCartButtons = document.querySelectorAll(".cart");
             const cartBadge = document.getElementById("cart-badge");
