--- a/food.html
+++ b/food.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,12 +23,14 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<style>.navigation {
+<style>
+.navigation {
     position: relative;
     width: 100%;
     height: 70px;
     background-color: transparent;
     border-radius: 10px;
+    margin-top: 100px;
 }
 
 .navigation ul {
@@ -40,6 +43,7 @@
     list-style: none;
     width: 70px;
     height: 70px;
+    z-index: 1;
 }
 
 .navigation ul li a {
@@ -72,7 +76,7 @@
 
     /* Efek awal untuk ikon drink (turun) */
     .navigation ul li:nth-child(1) a .icon#drink {
-        transform: translateY(10px);
+        transform: translateY(5px);
     }
 
     /* Efek ikon saat aktif */
@@ -82,7 +86,7 @@
 
     /* Efek khusus untuk ikon food saat aktif (menimpah aturan di atas) */
     .navigation ul li:nth-child(2).active a .icon#food {
-        transform: translateY(-45px); /* Lebih tinggi saat aktif */
+        transform: translateY(-40px); /* Lebih tinggi saat aktif */
     }
 
     /* Efek khusus untuk ikon drink saat aktif (menimpah aturan di atas) */
@@ -109,7 +113,7 @@
 .indicator {
     position: absolute;
     top: -36px;
-    left: 08px;
+    left: 05px;
     width: 60px;
     height: 60px;
     background-image: url('img/kopi.jpg');
