--- a/food.html
+++ b/food.html
@@ -509,10 +509,10 @@
             }
 
             // Cek halaman saat ini dan atur item aktif
-            if (window.location.pathname.includes('index.html')) {
-                setActive(drinkItem);
-            } else {
+            if (window.location.pathname.includes('food.html')) {
                 setActive(foodItem);
+            } else {
+                setActive(drinkItem);
             }
 
             // Tambahkan event listener untuk item navigasi
