--- a/food.html
+++ b/food.html
@@ -265,6 +265,7 @@
         </div>
 
         <section id="products" class="products">
+            <div class="menu">
             <h1>Main Course</h1>
             <div class="product-grid">
                 <!-- Product Item -->
@@ -349,7 +350,9 @@
                     <button class="btndes">O K</button>
                 </div>
             </div>
+        </div>
 
+        <div class="menu">
             <h1>Snack</h1>
             <div class="product-grid">
                 <!-- Product Item -->
@@ -460,8 +463,8 @@
                     </p>
                     <button class="btndes">O K</button>
                 </div>
-
             </div>
+        </div>
         </section>
     </main>
 
