--- a/food.html
+++ b/food.html
@@ -24,112 +24,68 @@
 
 <style>
     .navigation {
-        position: relative;
-        width: 100%;
-        height: 70px;
-        background-color: transparent;
-        border-radius: 10px;
-        margin-top: 100px;
-    }
+      position: relative;
+    display: flex;
+    margin-top: 100px;
+    width: auto;
+    height: 80px;
+    background-image: transparent; /* Contoh background */
+    background-size: cover;
+    border-radius: 10px;
+    padding-left: 5%;
+}
 
-    .navigation ul {
-        display: flex;
-        width: 300px;
-    }
+.navigation ul {
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
 
-    .navigation ul li {
-        position: relative;
-        list-style: none;
-        width: 70px;
-        height: 70px;
-        z-index: 1;
-    }
+.navigation ul li {
+  list-style: none;
+    margin: 0 20px;
+    position: relative;
+    transition: transform 0.3s ease-in-out; /* Efek transisi untuk tinggi ikon */
+    z-index: 1;
+}
 
-    .navigation ul li a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 100%;
-        text-align: center;
-        font-weight: 500;
-        color: #efff;
-        transition: color 0.5s;
-    }
+.navigation ul li a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: white; /* Contoh warna teks */
+    transition: color 0.3s ease-in-out; /* Transisi warna teks */
+    -webkit-tap-highlight-color: transparent;
+}
 
+.navigation ul li a .icon {
+    font-size: 1.5em;
+    line-height: 1;
+    margin-bottom: 5px;
+    transition: font-size 0.3s ease-in-out; /* Efek transisi untuk ukuran ikon */
+}
 
-    .navigation ul li a .icon {
-        position: relative;
-        display: block;
-        line-height: 75px;
-        font-size: 1.8em;
-        text-align: center;
-        transition: transform 0.5s, color 0.5s;
-        /* Tambahkan transisi untuk transform */
-        color: #efff;
-    }
+.navigation ul li a .text {
+    font-size: 0.8em;
+    margin-top: 1rem;
+}
 
-    /* Efek awal untuk ikon food (naik) */
-    .navigation ul li:nth-child(2) a .icon#food {
-        transform: translateY(-10px);
-    }
+.indicator {
+    position: absolute;
+    display: flex;
+    top: -36px;
+    width: 60px; /* Sesuaikan lebar indicator */
+    height: 60px;
+    background-image: url('img/kopi.jpg'); /* Contoh warna indicator */
+    background-size: cover;
+    border: 6px #f5f0e6 solid;
+    border-radius: 50%;
+    transition: left 0.3s ease-in-out; /* Animasi pergerakan indicator */
+}
 
-    /* Efek awal untuk ikon drink (turun) */
-    .navigation ul li:nth-child(1) a .icon#drink {
-        transform: translateY(5px);
-    }
-
-    /* Efek ikon saat aktif */
-    .navigation ul li.active a .icon {
-        transform: translateY(-35px);
-        /* Naik saat aktif */
-    }
-
-    /* Efek khusus untuk ikon food saat aktif (menimpah aturan di atas) */
-    .navigation ul li:nth-child(2).active a .icon#food {
-        transform: translateY(-40px);
-        /* Lebih tinggi saat aktif */
-    }
-
-    /* Efek khusus untuk ikon drink saat aktif (menimpah aturan di atas) */
-    .navigation ul li:nth-child(1).active a .icon#drink {
-        transform: translateY(-25px);
-        /* Naik lebih sedikit saat aktif (dari posisi turun) */
-    }
-
-    .navigation ul li a .text {
-        position: absolute;
-        color: #efff;
-        font-weight: 400;
-        font-size: 0.7em;
-        letter-spacing: 0.05rem;
-        transition: 0.5s;
-        opacity: 1;
-        transform: translateY(20px);
-        text-transform: capitalize;
-    }
-
-    .navigation ul li.active a .text {
-        opacity: 1;
-        transform: translateY(10px);
-    }
-
-    .indicator {
-        position: absolute;
-        top: -36px;
-        left: 05px;
-        width: 60px;
-        height: 60px;
-        background-image: url('img/kopi.jpg');
-        background-size: cover;
-        border-radius: 50%;
-        border: 6px solid #f5f0e6;
-        transition: transform 0.5s ease;
-        /* Transisi untuk pergerakan indikator */
-    }
-
-
-    .indicator::before {
+.indicator::before {
         content: '';
         position: absolute;
         top: 50%;
@@ -153,13 +109,39 @@
         box-shadow: -1px -10px 0 0 #f5f0e6;
     }
 
-    .navigation ul li:nth-child(1).active~.indicator {
-        transform: translateX(calc(70px * 0));
-    }
 
-    .navigation ul li:nth-child(2).active~.indicator {
-        transform: translateX(calc(70px * 1));
-    }
+/* Styling awal untuk ikon food lebih tinggi */
+.navigation ul li#food-item {
+    transform: translateY(-15px); /* Contoh nilai ketinggian */
+    left: 0px;
+}
+
+/* Hover pada item drink */
+.navigation ul li#drink:hover ~ .indicator {
+    left: calc(-125px + 80px); /* Sesuaikan dengan margin awal */
+}
+
+.navigation ul li#drink:hover {
+    transform: translateY(-10px); /* Contoh nilai ketinggian saat hover */
+}
+
+/* Kembalikan ketinggian ikon food saat ikon drink di-hover */
+.navigation ul li#drink:hover ~ ul li#drink {
+    transform: translateY(0);
+}
+
+/* Hover pada item food (opsional, untuk interaksi visual) */
+.navigation ul li#food-item:hover {
+    transform: translateY(-15px); /* Efek hover tambahan untuk food */
+}
+
+.navigation ul li#food-item:hover ~ .indicator {
+    left: 20px; /* Pastikan indicator kembali ke posisi food saat food di-hover */
+}
+
+.navigation ul li#food-item:hover a .icon {
+    font-size: 1.8em; /* Contoh ukuran ikon saat hover */
+}
 </style>
 
 <body>
@@ -244,25 +226,25 @@
 
         <div class="navigation">
             <ul>
-                <li class="list active">
-                    <a href="index.html">
-                        <span class="icon" id="drink">
-                            <ion-icon name="cafe"></ion-icon>
-                        </span>
-                        <span class="text">drink</span>
-                    </a>
-                </li>
-                <li class="list" id="food-item">
-                    <a href="food.html">
-                        <span class="icon" id="food">
-                            <ion-icon name="restaurant"></ion-icon>
-                        </span>
-                        <span class="text">food</span>
-                    </a>
-                </li>
-                <div class="indicator"></div>
+              <li class="list active" id="drink">
+                <a href="index.html">
+                  <span class="icon">
+                    <ion-icon name="cafe"></ion-icon>
+                  </span>
+                  <span class="text">drink</span>
+                </a>
+              </li>
+              <li class="list" id="food-item">
+                <a href="food.html">
+                  <span class="icon">
+                    <ion-icon name="restaurant"></ion-icon>
+                  </span>
+                  <span class="text">food</span>
+                </a>
+              </li>
+              <div class="indicator"></div>
             </ul>
-        </div>
+          </div>
 
         <section id="products" class="products">
             <div class="menu">
